--- a/manifest.json
+++ b/manifest.json
@@ -3,16 +3,16 @@
   "short_name": "ShopList",
   "start_url": "./index.html",
   "display": "standalone",
-  "background_color": "#ffffff",
+  "background_color": "#78dc77",
   "theme_color": "#78dc77",
   "icons": [
     {
-      "src": "https://www.beercss.com/favicon.png",
+      "src": "./assets/web-app-manifest-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "https://www.beercss.com/favicon.png",
+      "src": "./assets/web-app-manifest-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
